envoy.yaml
static_resources:
  listeners:
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_routes
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: httpbin
              http_filters:
                - name: envoy.filters.http.wasm
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                    config:
                      name: "wasm-oidc-plugin"
                      configuration:
                        "@type": "type.googleapis.com/google.protobuf.StringValue"
                        value: |
                          exclude_hosts:
                            # - "httpbin.org"
                          exclude_paths:
                            # - "/favicon.ico"
                          exclude_urls:
                            # - https://httpbin.org/favicon.ico

                          access_token_header_name: # or "Authorization"
                          access_token_header_prefix: "Bearer "
                          id_token_header_name: # or "X-Id-Token"
                          id_token_header_prefix: "Bearer "

                          cookie_name: "oidc-session" # max. 32 characters
                          logout_path: "/_wasm-oidc-plugin/logout"
                          filter_plugin_cookies: true # or false
                          cookie_duration_in_s: 8640000 # in seconds
                          token_validation: true # or false
                          # Optional: restrict access by ID token claims (OR across rules, AND with &)
                          # access_rules:
                          #   - "email==admin@company.com"
                          #   - "email=~.*@company\\.com$ & groups==admins"
                          aes_key: "i-am-a-forty-four-characters-long-string-key" # generate with `openssl rand -base64 32`

                          reload_interval_in_h: 1 # in hours
                          ticking_interval_in_ms: 500 # in milliseconds
                          open_id_configs:
                            - name: "Google"
                              image: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/3840px-Google_2015_logo.svg.png"
                              config_endpoint: "https://accounts.google.com/.well-known/openid-configuration"
                              upstream_cluster: "google"
                              authority: "accounts.google.com"
                              redirect_uri: "http://localhost:10000/oidc/callback"
                              client_id: "google-client-id"
                              scope: "openid profile email"
                              claims:
                                id_token:
                                  groups: null
                                  username: null
                              client_secret: "google-client-secret"
                              audience: "google-client-id"
                      vm_config:
                        runtime: "envoy.wasm.runtime.v8"
                        code:
                          local:
                            filename: "/etc/envoy/proxy-wasm-plugins/wasm_oidc_plugin.wasm"
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: httpbin
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin
                      port_value: 80
                  hostname: "httpbin.org"
    - name: google
      connect_timeout: 5s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
          upstream_http_protocol_options:
            auto_sni: true
      load_assignment:
        cluster_name: google
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: accounts.google.com
                      port_value: 443
              - endpoint:
                  address:
                    socket_address:
                      address: www.googleapis.com
                      port_value: 443
              - endpoint:
                  address:
                    socket_address:
                      address: oauth2.googleapis.com
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: "accounts.google.com"
